--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,8 +21,15 @@
         <item>languagues</item>
     </string-array>
 
+    <string-array name="category">
+        <item>Student Home</item>
+        <item>Teacher Home</item>
+    </string-array>
+
 
     <string name="facebook_app_id">330739073962834</string>
     <string name="title_activity_teacher">TeacherActivity</string>
+    <string name="select_a_category" />
+    <string name="select_a_category1" />
 
 </resources>
